Fallo POST Jedi, añadir mas campos nuevos
